[gd_scene load_steps=10 format=3 uid="uid://cdp2ouyl3iaqj"]

[ext_resource type="Script" path="res://bubble_character.gd" id="1_j311j"]
[ext_resource type="Texture2D" uid="uid://bt74lhiqtdnqp" path="res://assets/textures/Bubbles/Bubble-ColorOnly.png" id="2_hw01v"]
[ext_resource type="Texture2D" uid="uid://bkg4jga733mw7" path="res://assets/textures/Bubbles/Bubble-ShineOnly.png" id="3_421ty"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_tmubp"]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vmupy"]
radius = 50.0

[sub_resource type="Animation" id="Animation_a1wis"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BubbleCollision/Textures:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BubbleCollision/Textures:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, 2.5)]
}

[sub_resource type="Animation" id="Animation_p8mip"]
resource_name = "pop"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BubbleCollision/Textures:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.5, 2.5), Vector2(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BubbleCollision/Textures:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_tcq1d"]
resource_name = "wobble"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BubbleCollision/Textures:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.933033),
"update": 0,
"values": [Vector2(2.6, 2.4), Vector2(2.4, 2.6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_352x6"]
_data = {
"RESET": SubResource("Animation_a1wis"),
"pop": SubResource("Animation_p8mip"),
"wobble": SubResource("Animation_tcq1d")
}

[node name="BubbleCharacter" type="RigidBody2D"]
mass = 0.4
physics_material_override = SubResource("PhysicsMaterial_tmubp")
gravity_scale = 0.2
lock_rotation = true
contact_monitor = true
max_contacts_reported = 3
linear_damp = 0.4
script = ExtResource("1_j311j")

[node name="BubbleCollision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
scale = Vector2(0.6, 0.6)
shape = SubResource("CircleShape2D_vmupy")

[node name="Textures" type="Node2D" parent="BubbleCollision"]
scale = Vector2(2.6, 2.4)

[node name="BubbleColor" type="Sprite2D" parent="BubbleCollision/Textures"]
unique_name_in_owner = true
modulate = Color(0.65098, 0.611765, 1, 1)
scale = Vector2(0.08, 0.08)
texture = ExtResource("2_hw01v")

[node name="BubbleShine" type="Sprite2D" parent="BubbleCollision/Textures"]
unique_name_in_owner = true
modulate = Color(0.720116, 1, 0.997473, 1)
scale = Vector2(0.08, 0.08)
texture = ExtResource("3_421ty")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_352x6")
}
